# wasm_world

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.cpp  test.sh
.github/workflows/: cmake-multi-platform.yml
acceptance-test/: temp.py  test.py
scripts/: 0debug.wasm  0debug.wat  10control.wasm  10control.wat  11memory.wasm  11memory.wat  12table.wasm  12table.wat  13bulk.wasm  13bulk.wat  14nestedloop.wasm  14nestedloop.wat  15select_defect.wasm  15select_defect.wat  16readFileContent.wasm  16readFileContent.wat  16wasiArgGet.wasm  16wasiArgGet.wat  1start.wasm  1start.wat  2setmemory.wasm  2setmemory.wat  3printString.wasm  3printString.wat  4printnumber.wasm  4printnumber.wat  5parametricInstruction.wasm  5parametricInstruction.wat  6paramlocal.wasm  6paramlocal.wat  7global.wasm  7global.wat  8comparation.wasm  8comparation.wat  9numericOperators.wasm  9numericOperators.wat  test.wasm  test.wat
src/: AbstractSec.hpp  Code.hpp  CompilerConstrant.hpp  CustomSec.hpp  Data.hpp  ElemSec.hpp  ExportSec.hpp  FunctionSec.hpp  GlobalSec.hpp  ImportSec.hpp  MemSec.hpp  Module.cpp  Module.hpp  RefType.hpp  TableSec.hpp  TypeSec.hpp
src/instruction/: CallInstruction.hpp  ControlInstruction.cpp  ControlInstruction.hpp  EndInstruction.hpp  I32ConstInstruction.hpp  Instruction.hpp  MemoryInstruction.cpp  MemoryInstruction.hpp  NumericInstruction.cpp  NumericInstruction.hpp  ParametricInstruction.hpp  VariableInstruction.hpp
src/reader/: ModuleReader.cpp  ModuleReader.hpp  ModuleSection.hpp
src/runtime/: Runtime.hpp  SampleRuntime.hpp
src/type/: FunctionType.hpp  GlobalType.hpp  ImportDType.hpp  LimitType.hpp  TableType.hpp  ValType.hpp
test/: CMakeLists.txt  CompilerConstrantTest.cpp
